test/good/fieldpolicy/StaticFieldFromStaticFieldSamePolicy.para

public class StaticFieldFromStaticFieldSamePolicy {
    private static final Object highObserver;
   
    public static final policy high = { highObserver : }; 
    
    private static ?high int x = 1;
    private static ?high int y = x;
}
