test/bad/fieldpolicy/StaticFieldFromPolicy.para
public class StaticFieldFromPolicy {

    private static final Object highObserver;
    public static final policy high = { highObserver : }; 

    public static int x = high;
}